Created CSS stylesheet and edited contents of webpage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="styles.css">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-
@@ -14,7 +15,9 @@ width, initial-scale=1.0">
 </header>
 <main>
 <h2>Peter Thelwell</h2>
-<p>I am a student that is also currently doing an internship. I enjoy working out, playing videogames and spending time with my friends. I hope to learn alot in this course and to excel as well!</p>
+<p>I am a student that is also currently doing an internship. I enjoy working out, playing videogames and spending time with my friends. 
+    I hope to learn alot in this course and to excel as well! I am interested in Web Development because I want to learn how to create websites that are both stylish and functional.
+</p>
 </main>
 <footer>
 <p>Copyright &copy; 2020 <Your Name>.</p>
