--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ width, initial-scale=1.0">
 <p>This is a simple webpage for Lab 1 of INFO2180.</p>
 </header>
 <main>
+<img src="Picture of Me.jpg" alt ="A picture of myself">
 <h2>Peter Thelwell</h2>
 <p>I am a student that is also currently doing an internship. I enjoy working out, playing videogames and spending time with my friends. 
     I hope to learn alot in this course and to excel as well! I am interested in Web Development because I want to learn how to create websites that are both stylish and functional.
